<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d8e7ff">

    <ImageView
        android:id="@+id/imgArtwork"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:scaleType="center"/>

    <ScrollView
        android:id="@+id/viewArtDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/viewArtButtons"
        android:layout_below="@id/imgArtwork"
        android:paddingLeft="@dimen/fragment_padding"
        android:paddingRight="@dimen/fragment_padding"
        android:background="#d8e7ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/artwork_padding">

            <TextView
                android:id="@+id/txtArtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:ellipsize="marquee"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:text="@string/artworkName"/>


            <TextView
                android:id="@+id/txtArtStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/txtArtAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/author"/>

            <TextView
                android:id="@+id/txtArtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/date"/>


            <TextView
                android:id="@+id/txtArtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:text="@string/description"/>


            <TextView
                android:id="@+id/txtArtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:text="@string/price"/>


            <TextView
                android:id="@+id/txtArtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/txtArtDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_vertical_margin"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"
                android:text="@string/deviceName" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/viewArtButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:visibility="gone">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/action_delete"/>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/action_edit"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
